# OpenGl-1st-assignment

./: .gitignore  CMakeLists.txt  Cuboid.h  Disk.h  HollowDisk.h  Polygon.h  Shader.h  Texture.h  main.cpp  shaders.glsl
